finalize javascript branching logic and add reset button

--- a/index.html
+++ b/index.html
@@ -11,37 +11,38 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4" id="0">
-          <h1>1</h1>
+          <h1></h1>
         </div>
         <div class="col-md-4" id="1">
-          <h1>2</h1>
+          <h1></h1>
         </div>
         <div class="col-md-4" id="2">
-          <h1>3</h1>
+          <h1></h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4" id="3">
-          <h1>4</h1>
+          <h1></h1>
         </div>
         <div class="col-md-4" id="4">
-          <h1>5</h1>
+          <h1></h1>
         </div>
         <div class="col-md-4" id="5">
-          <h1>6</h1>
+          <h1></h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4" id="6">
-          <h1>7</h1>
+          <h1></h1>
         </div>
         <div class="col-md-4" id="7">
-          <h1>8</h1>
+          <h1></h1>
         </div>
         <div class="col-md-4" id="8">
-          <h1>9</h1>
+          <h1></h1>
         </div>
       </div>
+      <button id="reset" type="submit" name="button" class="btn btn-primary" onClick="window.location.reload()">RESET</button>
     </div>
   </body>
 </html>
